# cleanlab

./: .buildinfo  .coveragerc  .coveragerc_py27  .coveragerc_py3  .coveragerc_py34  .editorconfig  .gitignore  .mypy.ini  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  MANIFEST.in  Mayank.ipynb  PR_DESCRIPTION.md  README.md  README.rst  Untitled.ipynb  banking-intent-classification.csv  cleanlab.benchmarking.html  cleanlab.experimental.html  cleanlab.html  cleanlab.internal.html  cleanlab.token_classification.html  fake_path.ps  fli_benchmark.ipynb  fli_testing.ipynb  genindex.html  index.html  issue_862.ipynb  mem_benchmark.py  modules.html  objects.inv  playground.py  pyproject.toml  requirements-dev.txt  (+9 more)
.ci/: README.md  nblint.py  optional_dependencies_test.py
.doctrees/: cleanlab.benchmarking.doctree  cleanlab.doctree  cleanlab.experimental.doctree  cleanlab.internal.doctree  cleanlab.token_classification.doctree  environment.pickle  index.doctree  modules.doctree  setup.doctree
.github/: FUNDING.yml  get_min_dependencies.py  pull_request_template.md
_sources/: cleanlab.benchmarking.rst.txt  cleanlab.rst.txt
cleanlab/: __init__.py  baseline_methods.py  classification.py  coteaching.py  count.py  data_valuation.py  dataset.py  datavaluation.py  filter.py  filter_copy.py  filter_test.py  latent_algebra.py  latent_estimation.py  multiannotator.py  multilabel_classification.py  noise_generation.py  outlier.py  polyplex.py  pruning.py  rank.py  typing.py  util.py  version.py
confidentlearning/: classification.ipynb  classification.py  latent_algebra.ipynb  latent_algebra.py  latent_estimation.ipynb  latent_estimation.py  noise_generation.ipynb  noise_generation.py  polyplex.ipynb  pruning.ipynb  pruning.py  util.ipynb  util.py
docs/: .requirements.txt.swp  README.md  cleanlab.models.rst  cleanlab.rst  conf.py  index.rst  requirements-doc.txt  requirements.txt
examples/: README.md  classifier_comparison.py  drawing_polyplices.ipynb  drawing_polyplices.py  iris_simple_example.ipynb  iris_simple_example.py  model_selection_demo.ipynb  model_selection_demo.py  polyplex.py  simplifying_confident_learning_tutorial.ipynb  simplifying_confident_learning_tutorial.py  tutorial.ipynb  tutorial.py  visualizing_confident_learning.ipynb  visualizing_confident_learning.py
finding_ImageNet_label_errors/: README.md  imagenet_val_label_errors.txt  imagenet_val_label_errors_unique_id_only.txt
models/: mnist_pytorch.ipynb
source/: conf.py  index.rst
tests/: README.md  cleanlab.experimental.rst  cleanlab.internal.rst  cleanlab.token_classification.rst  conf.py  conftest.py  deprecated_test_model_fasttext.py  get_cooking_stackexchange_data.sh  index.rst  modules.rst  test_baseline_methods.py  test_classification.ipynb  test_classification.py  test_data_valuation.py  test_dataset.py  test_datavaluation.py  (+23 more)
(+479 files in other folders)
